--- a/adminHome.html
+++ b/adminHome.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library Management System-User</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
     <div class="container">
         <div class="links">
             <a href="chart.html">Chart</a>
-            <a href="home.html">Back</a>
+            <a href="{{ url_for('home') }}">Back</a>
         </div>
         <h2>Admin Home</h2>
             <div class="links">
-                <a href="Maintenance.html">Maintenance</a>
-                <a href="Reports.html">Reports</a>
+                <a href="{{ url_for('maintenance') }}">Maintenance</a>
+                <a href="{{ url_for('reports') }}">Reports</a>
                 <a href="{{ url_for('transactions') }}">Transactions</a>
             </div>
 
