--- a/register.html
+++ b/register.html
@@ -87,7 +87,9 @@
      
 
             <h1 style="color: red; background-color: white; text-align: center;";>{{message}} </h1>
-    <form action="/register"  method="post"><!-- signup http path /fetch-->
+
+            <form action="{{ url_for('register') }}" method="post">
+  
         <div class="row">
             
             <input type="text" name="username" placeholder="Username" required>
